--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  /* font-family: 'Varela Round', sans-serif; */
+  font-size: 100%;
+  vertical-align: botton;
+  text-decoration: none;
+  box-sizing: border-box;
+
+}
+
 .App {
   text-align: center;
 }
